--- a/MiPaginaWebCoder2/css/estilo.css
+++ b/MiPaginaWebCoder2/css/estilo.css
@@ -1,3 +1,4 @@
+
 /*-----------GENERAL e INDEX-----------*/
 *
 {
@@ -9,11 +10,12 @@
 {
     --main-bg-color: linear-gradient(to top,rgb(226, 228, 245),rgb(97, 97, 243));
     --secondary-color: linear-gradient(to top,rgb(97, 97, 243),rgb(226, 228, 245));
-    --header-color1: rgb(21, 21, 90);
+    --header-color1: rgb(34, 34, 121);
     --header-color2: rgb(196, 196, 221);
     --color-texto1: rgb(20, 19, 19);
     --color-texto2: white;
     --color-texto3: rgb(211, 199, 37);
+    --color-texto4: black;
     --font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 }
@@ -24,7 +26,8 @@ body
     background-image: var(--main-bg-color);
     color: var(--color-texto1);
     box-sizing: border-box;
-    
+    padding: 0;
+    margin: 0;
         
 }
 
@@ -54,7 +57,7 @@ a:visited
 
 
 
-header
+nav
 {
     
     background-color:var(--header-color1);
@@ -65,6 +68,7 @@ header
     display: flex;
     justify-content: space-between;
     font-weight: bold;
+    font-size:x-large;
     font-style: oblique;
     align-items: center ;
     margin: 0 auto;
@@ -108,6 +112,7 @@ main
     justify-content: space-around;
     align-items: center ;
     flex-wrap: wrap;
+    width: 100%;
 }
 
 Section
@@ -129,22 +134,31 @@ Section
 footer
 {
     background-color:var(--header-color1);
-    font-weight: bold;
     align-items: center;
-    height: 100px;
+    text-align: center;
+    height: 230px;
     color: var(--color-texto2);
-    padding: 20px;
+    padding: 50px;
     display: flex;
-    flex-wrap: wrap;        
+    
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 100%;        
 }
 
 .footerR
 {
-    padding: 15px 10px;
+    padding: 1px 4px;
     flex-wrap: wrap;
     border-radius: 18px;
-    
+
 }
+
+.copy
+{
+    float: right;
+}
+
 
 
 /*-----------FIN DEL GENERAL e INDEX-----------*/
@@ -156,15 +170,22 @@ footer
 
 @media only screen and (max-width: 480px)
 {    
-    header{
+    body
+    {
+        width: 100%;
+        height: auto;
+    }
+    
+    nav
+    {
         flex-direction: column;
         color: var(--color-texto2);
-        }
+    }
 
     .icono
     {
         min-width: 15rem;
-        padding-right: 80px;
+        padding-right: 180px;
         align-items: center;
         border: black;   
     }
@@ -181,13 +202,25 @@ footer
 
     main{
             text-align: justify;
-            padding: 5px;
+            padding: 35px;
+            margin: auto auto auto auto;
     }
 
     section{
         flex-direction: column;
+        justify-content: center;
         gap: 10px;
     }
+
+    .FotoE
+    {
+        
+        padding: 5px;
+        
+    }
+
+
+
     footer{
         justify-content: center;        
         min-height: 120px;
@@ -208,7 +241,7 @@ footer
 
 
 /*------------------HISTORIA-------------------*/
-
+/*
 .mainH
 {
     min-height: 600px;
@@ -218,16 +251,16 @@ footer
     text-align: justify;
 
 }
-
+*/
 .imagen2
 {
-    width: 80%;
-    height: 80%;
+    width: 60%;
+    height: 60%;
     align-items: center;
 }
 
 @media only screen and (max-width: 480px)
-{
+{/*
     .mainH
     {
         text-align: justify;
@@ -236,7 +269,7 @@ footer
         margin-top: 100px;
         margin-left: 20px;
         margin-right: 20px;
-    }
+    }*/
 
     .imagen2
     {
@@ -327,8 +360,8 @@ iframe
     
     flex-direction: column;
     justify-content: center;
-    width: 600px;
-    height: 400px;
+    width: 800px;
+    height: 600px;
     
 }
 
@@ -336,18 +369,41 @@ iframe
 .imagen4
 {
     max-width: 15rem;
-    padding: 50px;
-
+   
 }
 
 h3
 {
-    text-align: center;   
+    text-align: justify;
+    padding: 20px;   
 }
 
 p
 {
     padding: 50px;
+}
+
+.parrafocar1
+{
+    color: var(--color-texto1);
+    background-color: rgba(194, 177, 157, 0.75);
+    font-weight: bold;
+    font-size:larger;
+    align-items: center;
+    height: 5%;
+    width: 20%;
+}
+
+.ul
+{
+    text-align: justify;
+    margin-top: 10px;
+    padding: 50px;
+}
+
+.carousel-item
+{
+    width: 10%;
 }
 
 
@@ -357,28 +413,26 @@ p
     .mainA
     {
         text-align: justify;
-        padding: 5px;
-        min-height: 300px;
-        margin-top: 100px;
-        margin-left: 20px;
-        margin-right: 20px;
+        padding: 35px;
+        margin: auto auto auto auto;
     }
 
     .sectionA
     {
-        flex-direction: column;
-        justify-content: center;
-        text-align: justify;
-        min-height: 600px;
-        
-        padding: 0px;
-        margin: 0px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 35px;
+    margin: auto auto auto auto;
+    text-align: justify;
+    max-width: 100%;
+
     }
 
-    .iframe
+    iframe
     {
-        width: 1px;
-        height: 1px;
+        width: 350px;
+        max-height: 200px;
         
     }
 
