--- a/PreEntrega3Gonzalez Juan/css/style.scss
+++ b/PreEntrega3Gonzalez Juan/css/style.scss
@@ -1,30 +1,21 @@
 
 /*-----------GENERAL e INDEX-----------*/
+
+@import 'variables';
+
+
 *
 {
     padding: 0;
     margin: 0;
 }
 
-:root
-{
-    --main-bg-color: linear-gradient(to top,rgb(226, 228, 245),rgb(97, 97, 243));
-    --secondary-color: linear-gradient(to top,rgb(97, 97, 243),rgb(226, 228, 245));
-    --header-color1: rgb(34, 34, 121);
-    --header-color2: rgb(196, 196, 221);
-    --color-texto1: rgb(20, 19, 19);
-    --color-texto2: white;
-    --color-texto3: rgb(211, 199, 37);
-    --color-texto4: black;
-    --font-family: Verdana, Geneva, Tahoma, sans-serif;
-
-}
 
 body
 {
-    font-family: var(--font-family);
-    background-image: var(--main-bg-color);
-    color: var(--color-texto1);
+    font-family: $font-family;
+    background-image: $color-principal;
+    color: $color-texto1;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -33,26 +24,26 @@ body
 
 a:hover
 {
-    color: black;
-    background-color: rgb(182, 222, 235);
+    color: $color-texto4;
+    background-color: $color-tercery;
     box-shadow: 8px 0px 50px rgba(0, 0, 0, 0.5);
 }
 
 .FotoE:hover
 {
-    color: black;
-    background-color: rgb(182, 222, 235);
+    color: $color-texto4;
+    background-color: $color-tercery;
 }
 
 a:active
 {
-    color:white;
-    background-color: black;
+    color:$color-texto2;
+    background-color: $color-texto4;
 }
 
 a:visited
 {
-    color: var(--color-texto2);
+    color: $color-texto2;
 }
 
 
@@ -60,8 +51,8 @@ a:visited
 nav
 {
     
-    background-color:var(--header-color1);
-    border-bottom: 100px rgb(202, 193, 193);
+    background-color:$color-header1;
+    border-bottom: 100px $color-header3;
     padding: 20px;
     height: 15%;
     width: 100%;
@@ -81,6 +72,31 @@ nav
     max-width: 5rem;
     margin-left: 1px;
     padding: 20px 35px 20px 20px;  
+    
+}
+
+.latido
+{
+    animation-name: latido;
+    animation-iteration-count: 3;
+    animation-duration: 1s;
+}
+
+
+@keyframes latido
+{
+    0%
+    {
+        transform: scale(1);
+    }
+    50%
+    {
+        transform: scale(0.9);
+    }
+    100%
+    {
+        transform: scale(1);
+    }
 }
 
 nav
@@ -127,23 +143,23 @@ Section
 
 .FotoE
 {
-    border: solid white;
+    border: solid $color-texto2;
     padding: 50px  ;
 }
 
 footer
 {
-    background-color:var(--header-color1);
+    background-color:$color-header1;
     align-items: center;
     text-align: center;
     height: 230px;
-    color: var(--color-texto2);
+    color: $color-texto2;
     padding: 50px;
     display: flex;
-    
     flex-wrap: wrap;
     margin: 0 auto;
-    width: 100%;        
+    width: 100%;   
+    
 }
 
 .footerR
@@ -151,8 +167,23 @@ footer
     padding: 1px 4px;
     flex-wrap: wrap;
     border-radius: 18px;
-
+    animation-name: redes;
+    animation-duration: 8s;
+    animation-iteration-count: infinite;
 }
+
+@keyframes redes
+{
+    0%
+    {
+        transform: rotate(0deg);
+    }
+    100%
+    {
+        transform: rotate(-360deg);
+    }
+}
+
 
 .copy
 {
@@ -179,7 +210,7 @@ footer
     nav
     {
         flex-direction: column;
-        color: var(--color-texto2);
+        color: $color-texto2;
     }
 
     .icono
@@ -187,12 +218,12 @@ footer
         min-width: 15rem;
         padding-right: 180px;
         align-items: center;
-        border: black;   
+        border: $color-texto4;   
     }
 
     nav ul{
         flex-direction: column;
-        color: var(--color-texto2);
+        color: $color-texto2;
         text-size-adjust: 100%;
     }
 
@@ -225,12 +256,12 @@ footer
         justify-content: center;        
         min-height: 120px;
         text-align: center;
-        color: var(--color-texto2);
+        color: $color-texto2;
     }
 
     
     .footerR{
-        width: 50px;
+        width: 55px;
         height: 50px;
     }
       
@@ -291,7 +322,7 @@ form
     width: 50%;
     padding: 15px 10px;
     font-size: 15px;
-    border: 2px solid black;
+    border: 2px solid $color-texto4;
     margin-bottom: 20px;
     border-radius: 3px;
     outline: 0px;
@@ -315,8 +346,8 @@ textarea
     font-size: 16px;
     border: none;
     outline: 0px;
-    background: var(--header-color1);
-    color: var(--color-texto2);
+    background: $color-header1;
+    color: $color-texto2;
     border-radius: 3px;
     cursor: pointer;
     transition: all 300ms ease;
@@ -385,8 +416,8 @@ p
 
 .parrafocar1
 {
-    color: var(--color-texto1);
-    background-color: rgba(194, 177, 157, 0.75);
+    color: $color-texto1;
+    background-color: $color-cuarty;
     font-weight: bold;
     font-size:larger;
     align-items: center;
