--- a/ProyectofinalGonzalezJuan/css/_variables.scss
+++ b/ProyectofinalGonzalezJuan/css/_variables.scss
@@ -1,4 +1,4 @@
-$color-principal: linear-gradient(to top,rgb(226, 228, 245),rgb(97, 97, 243));
+$color-principal: linear-gradient(to top,rgb(154, 161, 245),rgba(43, 43, 197, 0.945));
 $color-secondary: linear-gradient(to top,rgb(97, 97, 243),rgb(226, 228, 245));
 $color-tercery: rgb(182, 222, 235);
 $color-cuarty: rgba(194, 177, 157, 0.75);
@@ -9,6 +9,7 @@ $color-texto1: rgb(20, 19, 19);
 $color-texto2: white;
 $color-texto3: rgb(211, 199, 37);
 $color-texto4: black;
+$color-texto5: rgb(208, 223, 223);
 $font-family: Verdana, Geneva, Tahoma, sans-serif;
 
 
