--- a/ProyectofinalGonzalezJuan/css/estilo.css
+++ b/ProyectofinalGonzalezJuan/css/estilo.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-image: linear-gradient(to top, rgb(226, 228, 245), rgb(97, 97, 243));
+  background-image: linear-gradient(to top, rgb(154, 161, 245), rgba(43, 43, 197, 0.945));
   color: rgb(20, 19, 19);
   box-sizing: border-box;
   padding: 0;
@@ -15,8 +15,7 @@ body {
 
 a:hover {
   color: black;
-  background-color: rgb(182, 222, 235);
-  box-shadow: 8px 0px 50px rgba(0, 0, 0, 0.5);
+  box-shadow: 8px 0px 50px rgba(0, 0, 0, 0.9);
 }
 
 .FotoE:hover {
@@ -98,6 +97,7 @@ main {
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
+  color: rgb(208, 223, 223);
 }
 
 Section {
@@ -211,7 +211,7 @@ footer {
 }
 */
 .imagen2 {
-  width: 60%;
+  width: 90%;
   height: 60%;
   align-items: center;
 }
@@ -227,8 +227,8 @@ footer {
        margin-right: 20px;
    }*/
   .imagen2 {
-    width: 100%;
-    height: 100%;
+    width: 385px;
+    height: 260px;
     align-items: center;
   }
 }
@@ -288,7 +288,7 @@ textarea {
 iframe {
   flex-direction: column;
   justify-content: center;
-  width: 800px;
+  width: 900px;
   height: 600px;
 }
 
@@ -303,6 +303,7 @@ h3 {
 
 p {
   padding: 50px;
+  color: rgb(208, 223, 223);
 }
 
 .parrafocar1 {
