--- a/ProyectofinalGonzalezJuan/css/style.scss
+++ b/ProyectofinalGonzalezJuan/css/style.scss
@@ -25,8 +25,7 @@ body
 a:hover
 {
     color: $color-texto4;
-    background-color: $color-tercery;
-    box-shadow: 8px 0px 50px rgba(0, 0, 0, 0.5);
+    box-shadow: 8px 0px 50px rgba(0, 0, 0, 0.9);
 }
 
 .FotoE:hover
@@ -112,6 +111,7 @@ nav ul
     display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
+    
 }
 
 nav li
@@ -129,6 +129,7 @@ main
     align-items: center ;
     flex-wrap: wrap;
     width: 100%;
+    color: $color-texto5;
 }
 
 Section
@@ -145,6 +146,7 @@ Section
 {
     border: solid $color-texto2;
     padding: 50px  ;
+   
 }
 
 footer
@@ -285,7 +287,7 @@ footer
 */
 .imagen2
 {
-    width: 60%;
+    width: 90%;
     height: 60%;
     align-items: center;
 }
@@ -304,8 +306,8 @@ footer
 
     .imagen2
     {
-        width: 100%;
-        height: 100%;
+        width: 385px;
+        height: 260px;
         align-items: center;
     }
     
@@ -391,7 +393,7 @@ iframe
     
     flex-direction: column;
     justify-content: center;
-    width: 800px;
+    width: 900px;
     height: 600px;
     
 }
@@ -412,6 +414,7 @@ h3
 p
 {
     padding: 50px;
+    color: $color-texto5;
 }
 
 .parrafocar1
@@ -481,6 +484,8 @@ p
         justify-content: center;
         padding: 0px;
     }
+
+    
     
 }
 
